# AMG

./: .gitmodules  CMakeLists.txt  README.md
include/amg/: tokenizer.hpp
src/: main.cpp
src/tokenizer/: tokenizer.cpp
tests/: test_tokenizer.cpp
